(kinda?) fix header img getting too big on wide screens

--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ header {
 
 header img {
   width: 100%;
+  max-height: 400px;
+  object-fit: contain;
 }
 
 header i {
